spargen/tests/snapshots/diff__flipping_a_field_between_required_and_optional_is_major_both_ways.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-requiredness-changed|Pet.name|field now required
bump=major
