spargen/tests/snapshots/diff__flipping_a_parameter_between_required_and_optional_is_major_both_ways-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-requiredness-changed|GET /pets param `limit` (query)|parameter now optional
bump=major
