spargen/tests/snapshots/diff__losing_api_error_body_is_major_and_gaining_it_is_minor-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|error-type-changed|GET /pets|error type `Error{404:String, 409:i64}` -> `Error{404:String, 409:String}`
minor|api-error-body-added|GET /pets|error type now implements `ApiErrorBody` (`Body = String`)
bump=major
