spargen/tests/snapshots/diff__moving_a_parameter_to_another_location_compares_it_as_one_parameter-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-type-changed|GET /pets param `limit` (query -> header)|parameter type `i64` -> `String`
bump=major
