spargen/tests/snapshots/diff__moving_a_parameter_to_another_location_compares_it_as_one_parameter-3.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-removed|GET /pets param `id` (query)|parameter removed (was `String`)
minor|optional-param-added|GET /pets param `id` (header)|optional parameter added: `String`
bump=major
