spargen/tests/snapshots/diff__open_narrowing_adds_no_type_the_output_does_not_use-6.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|variant-added|ResponseBodykind|variant added: `Other(String)`, holding any unlisted value
minor|variant-added|ResponseBodykindMember1|variant added: `Other(String)`, holding any unlisted value
bump=minor
